# goit-pythonweb-hw-12

./: .env.example  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/versions/: 032863568583_version_2.py  058660d57029_create_users_table.py  f450ef3676e7_initial_migrations.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16396  16398  16400  16413  16415  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/global/: 1260  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  global.stat
src/: schemas.py
src/api/: auth.py  contacts.py  users.py  utils.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  upload_file.py  users.py
tests/: conftest.py  test_auth_services_unit.py  test_contact_repository_unit.py  test_contact_services_unit.py  test_email_services_unit.py  test_integration_auth.py  test_integration_contacts.py  test_integration_users.py  test_upload_file_unit.py  test_users_repository_unit.py  test_users_services_unit.py
